--- a/styles.css
+++ b/styles.css
@@ -115,13 +115,14 @@ p {
   color: #000;
 }      
 .ten a {
-  color: #0066cc;
+  color: #0000ff;
+  font-size: 20px;  
 }
 .ten a:hover {
-  color: #80bfff;
+  color: #000ff;
 }
 .ten a:visited {
-  color: #0066cc;
+  color: #0000ff;
 }
 /*FOOTER STYLES*/
 footer {
